@@ -540,7 +540,8 @@
 	(Y-offset-callbacks . (,Staff_symbol_referencer::callback))
 	(staff-position . 0)
 	(expand-limit . 10)
-	(thickness . 6.6)
+	(thick-thickness . 6.6)
+	(hair-thickness . 2.0)
 	(padding . 1)
 	(meta . ((interfaces . (multi-measure-rest-interface rest-interface font-interface staff-symbol-referencer-interface spanner-interface))))
 	))
